// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Keyboard > should import english layout 1`] = `
Keyboard {
  "opts": {
    "hotkeydRows": "middle-row",
    "isCustom": false,
    "layout": {
      "code": "en",
      "imported": {
        "default": [
          "\` 1 2 3 4 5 6 7 8 9 0 - = {bksp}",
          "{tab} q w e r t y u i o p [ ] \\",
          "{lock} a s d f g h j k l ; ' {enter}",
          "{shift} z x c v b n m , . / {shift}",
          ".com @ {space}",
        ],
        "shift": [
          "~ ! @ # $ % ^ & * ( ) _ + {bksp}",
          "{tab} Q W E R T Y U I O P { } |",
          "{lock} A S D F G H J K L : " {enter}",
          "{shift} Z X C V B N M < > ? {shift}",
          ".com @ {space}",
        ],
      },
      "name": "English",
    },
  },
  "rows": [
    {
      "availableNotes": 11,
      "keyType": undefined,
      "keys": [
        {
          "code": "IntlBackslash",
          "key": "\`",
        },
        {
          "code": "Digit1",
          "key": "1",
        },
        {
          "code": "Digit2",
          "key": "2",
        },
        {
          "code": "Digit3",
          "key": "3",
        },
        {
          "code": "Digit4",
          "key": "4",
        },
        {
          "code": "Digit5",
          "key": "5",
        },
        {
          "code": "Digit6",
          "key": "6",
        },
        {
          "code": "Digit7",
          "key": "7",
        },
        {
          "code": "Digit8",
          "key": "8",
        },
        {
          "code": "Digit9",
          "key": "9",
        },
        {
          "code": "Digit0",
          "key": "0",
        },
        {
          "code": "Minus",
          "key": "-",
        },
        {
          "code": "Equal",
          "key": "=",
        },
        {
          "code": "Backspace",
          "key": "{bksp}",
        },
      ],
      "startNoteOffset": 2,
    },
    {
      "availableNotes": 12,
      "keyType": "black",
      "keys": [
        {
          "code": "Tab",
          "key": "{tab}",
        },
        {
          "code": "KeyQ",
          "key": "q",
        },
        {
          "code": "KeyW",
          "key": "w",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 1,
            "sharps": 1,
          },
        },
        {
          "code": "KeyE",
          "key": "e",
          "note": {
            "flats": 1,
            "note": "E♭",
            "semitones": 3,
            "sharps": 0,
          },
        },
        {
          "code": "KeyR",
          "key": "r",
        },
        {
          "code": "KeyT",
          "key": "t",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 6,
            "sharps": 1,
          },
        },
        {
          "code": "KeyY",
          "key": "y",
          "note": {
            "flats": 0,
            "note": "G♯",
            "semitones": 8,
            "sharps": 1,
          },
        },
        {
          "code": "KeyU",
          "key": "u",
          "note": {
            "flats": 1,
            "note": "B♭",
            "semitones": 10,
            "sharps": 0,
          },
        },
        {
          "code": "KeyI",
          "key": "i",
        },
        {
          "code": "KeyO",
          "key": "o",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 13,
            "sharps": 1,
          },
        },
        {
          "code": "KeyP",
          "key": "p",
          "note": {
            "flats": 1,
            "note": "E♭",
            "semitones": 15,
            "sharps": 0,
          },
        },
        {
          "code": "BracketLeft",
          "key": "[",
        },
        {
          "code": "BracketRight",
          "key": "]",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 18,
            "sharps": 1,
          },
        },
        {
          "code": "Enter",
          "key": "{enter}",
        },
      ],
      "startNoteOffset": 2,
    },
    {
      "availableNotes": 12,
      "keyType": "white",
      "keys": [
        {
          "code": "Capslock",
          "key": "{lock}",
        },
        {
          "code": "KeyA",
          "key": "a",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 0,
            "sharps": 0,
          },
        },
        {
          "code": "KeyS",
          "key": "s",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 2,
            "sharps": 0,
          },
        },
        {
          "code": "KeyD",
          "key": "d",
          "note": {
            "flats": 0,
            "note": "E",
            "semitones": 4,
            "sharps": 0,
          },
        },
        {
          "code": "KeyF",
          "key": "f",
          "note": {
            "flats": 0,
            "note": "F",
            "semitones": 5,
            "sharps": 0,
          },
        },
        {
          "code": "KeyG",
          "key": "g",
          "note": {
            "flats": 0,
            "note": "G",
            "semitones": 7,
            "sharps": 0,
          },
        },
        {
          "code": "KeyH",
          "key": "h",
          "note": {
            "flats": 0,
            "note": "A",
            "semitones": 9,
            "sharps": 0,
          },
        },
        {
          "code": "KeyJ",
          "key": "j",
          "note": {
            "flats": 0,
            "note": "B",
            "semitones": 11,
            "sharps": 0,
          },
        },
        {
          "code": "KeyK",
          "key": "k",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 12,
            "sharps": 0,
          },
        },
        {
          "code": "KeyL",
          "key": "l",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 14,
            "sharps": 0,
          },
        },
        {
          "code": "Semicolon",
          "key": ";",
          "note": {
            "flats": 0,
            "note": "E",
            "semitones": 16,
            "sharps": 0,
          },
        },
        {
          "code": "Quote",
          "key": "'",
          "note": {
            "flats": 0,
            "note": "F",
            "semitones": 17,
            "sharps": 0,
          },
        },
        {
          "code": "Backslash",
          "key": "\\",
          "note": {
            "flats": 0,
            "note": "G",
            "semitones": 19,
            "sharps": 0,
          },
        },
      ],
      "startNoteOffset": 1,
    },
    {
      "availableNotes": 11,
      "keyType": undefined,
      "keys": [
        {
          "code": "ShiftLeft",
          "key": "{shift}",
        },
        {
          "code": "Backquote",
          "key": "{empty}",
        },
        {
          "code": "KeyZ",
          "key": "z",
        },
        {
          "code": "KeyX",
          "key": "x",
        },
        {
          "code": "KeyC",
          "key": "c",
        },
        {
          "code": "KeyV",
          "key": "v",
        },
        {
          "code": "KeyB",
          "key": "b",
        },
        {
          "code": "KeyN",
          "key": "n",
        },
        {
          "code": "KeyM",
          "key": "m",
        },
        {
          "code": "Comma",
          "key": ",",
        },
        {
          "code": "Period",
          "key": ".",
        },
        {
          "code": "Slash",
          "key": "/",
        },
        {
          "code": "ShiftRight",
          "key": "{shift}",
        },
      ],
      "startNoteOffset": 1,
    },
  ],
  "setCustomRow": {
    "nextKeyIdx": -1,
    "nextNoteOffset": 0,
    "row": {
      "availableNotes": 0,
      "keyType": undefined,
      "keys": [],
      "startNoteOffset": 0,
    },
    "rowIndex": 0,
  },
}
`;

exports[`Keyboard > should map notes to two rows correctly with english layout 1`] = `
Keyboard {
  "opts": {
    "hotkeydRows": "two-rows",
    "isCustom": false,
    "layout": {
      "code": "en",
      "imported": {
        "default": [
          "\` 1 2 3 4 5 6 7 8 9 0 - = {bksp}",
          "{tab} q w e r t y u i o p [ ] \\",
          "{lock} a s d f g h j k l ; ' {enter}",
          "{shift} z x c v b n m , . / {shift}",
          ".com @ {space}",
        ],
        "shift": [
          "~ ! @ # $ % ^ & * ( ) _ + {bksp}",
          "{tab} Q W E R T Y U I O P { } |",
          "{lock} A S D F G H J K L : " {enter}",
          "{shift} Z X C V B N M < > ? {shift}",
          ".com @ {space}",
        ],
      },
      "name": "English",
    },
  },
  "rows": [
    {
      "availableNotes": 11,
      "keyType": "black",
      "keys": [
        {
          "code": "IntlBackslash",
          "key": "\`",
        },
        {
          "code": "Digit1",
          "key": "1",
        },
        {
          "code": "Digit2",
          "key": "2",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 18,
            "sharps": 1,
          },
        },
        {
          "code": "Digit3",
          "key": "3",
          "note": {
            "flats": 0,
            "note": "G♯",
            "semitones": 20,
            "sharps": 1,
          },
        },
        {
          "code": "Digit4",
          "key": "4",
          "note": {
            "flats": 1,
            "note": "B♭",
            "semitones": 22,
            "sharps": 0,
          },
        },
        {
          "code": "Digit5",
          "key": "5",
        },
        {
          "code": "Digit6",
          "key": "6",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 25,
            "sharps": 1,
          },
        },
        {
          "code": "Digit7",
          "key": "7",
          "note": {
            "flats": 1,
            "note": "E♭",
            "semitones": 27,
            "sharps": 0,
          },
        },
        {
          "code": "Digit8",
          "key": "8",
        },
        {
          "code": "Digit9",
          "key": "9",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 30,
            "sharps": 1,
          },
        },
        {
          "code": "Digit0",
          "key": "0",
          "note": {
            "flats": 0,
            "note": "G♯",
            "semitones": 32,
            "sharps": 1,
          },
        },
        {
          "code": "Minus",
          "key": "-",
          "note": {
            "flats": 1,
            "note": "B♭",
            "semitones": 34,
            "sharps": 0,
          },
        },
        {
          "code": "Equal",
          "key": "=",
        },
        {
          "code": "Backspace",
          "key": "{bksp}",
        },
      ],
      "startNoteOffset": 2,
    },
    {
      "availableNotes": 12,
      "keyType": "white",
      "keys": [
        {
          "code": "Tab",
          "key": "{tab}",
        },
        {
          "code": "KeyQ",
          "key": "q",
          "note": {
            "flats": 0,
            "note": "F",
            "semitones": 17,
            "sharps": 0,
          },
        },
        {
          "code": "KeyW",
          "key": "w",
          "note": {
            "flats": 0,
            "note": "G",
            "semitones": 19,
            "sharps": 0,
          },
        },
        {
          "code": "KeyE",
          "key": "e",
          "note": {
            "flats": 0,
            "note": "A",
            "semitones": 21,
            "sharps": 0,
          },
        },
        {
          "code": "KeyR",
          "key": "r",
          "note": {
            "flats": 0,
            "note": "B",
            "semitones": 23,
            "sharps": 0,
          },
        },
        {
          "code": "KeyT",
          "key": "t",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 24,
            "sharps": 0,
          },
        },
        {
          "code": "KeyY",
          "key": "y",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 26,
            "sharps": 0,
          },
        },
        {
          "code": "KeyU",
          "key": "u",
          "note": {
            "flats": 0,
            "note": "E",
            "semitones": 28,
            "sharps": 0,
          },
        },
        {
          "code": "KeyI",
          "key": "i",
          "note": {
            "flats": 0,
            "note": "F",
            "semitones": 29,
            "sharps": 0,
          },
        },
        {
          "code": "KeyO",
          "key": "o",
          "note": {
            "flats": 0,
            "note": "G",
            "semitones": 31,
            "sharps": 0,
          },
        },
        {
          "code": "KeyP",
          "key": "p",
          "note": {
            "flats": 0,
            "note": "A",
            "semitones": 33,
            "sharps": 0,
          },
        },
        {
          "code": "BracketLeft",
          "key": "[",
          "note": {
            "flats": 0,
            "note": "B",
            "semitones": 35,
            "sharps": 0,
          },
        },
        {
          "code": "BracketRight",
          "key": "]",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 36,
            "sharps": 0,
          },
        },
        {
          "code": "Enter",
          "key": "{enter}",
        },
      ],
      "startNoteOffset": 1,
    },
    {
      "availableNotes": 12,
      "keyType": "black",
      "keys": [
        {
          "code": "Capslock",
          "key": "{lock}",
        },
        {
          "code": "KeyA",
          "key": "a",
        },
        {
          "code": "KeyS",
          "key": "s",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 1,
            "sharps": 1,
          },
        },
        {
          "code": "KeyD",
          "key": "d",
          "note": {
            "flats": 1,
            "note": "E♭",
            "semitones": 3,
            "sharps": 0,
          },
        },
        {
          "code": "KeyF",
          "key": "f",
        },
        {
          "code": "KeyG",
          "key": "g",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 6,
            "sharps": 1,
          },
        },
        {
          "code": "KeyH",
          "key": "h",
          "note": {
            "flats": 0,
            "note": "G♯",
            "semitones": 8,
            "sharps": 1,
          },
        },
        {
          "code": "KeyJ",
          "key": "j",
          "note": {
            "flats": 1,
            "note": "B♭",
            "semitones": 10,
            "sharps": 0,
          },
        },
        {
          "code": "KeyK",
          "key": "k",
        },
        {
          "code": "KeyL",
          "key": "l",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 13,
            "sharps": 1,
          },
        },
        {
          "code": "Semicolon",
          "key": ";",
          "note": {
            "flats": 1,
            "note": "E♭",
            "semitones": 15,
            "sharps": 0,
          },
        },
        {
          "code": "Quote",
          "key": "'",
        },
        {
          "code": "Backslash",
          "key": "\\",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 18,
            "sharps": 1,
          },
        },
      ],
      "startNoteOffset": 1,
    },
    {
      "availableNotes": 11,
      "keyType": "white",
      "keys": [
        {
          "code": "ShiftLeft",
          "key": "{shift}",
        },
        {
          "code": "Backquote",
          "key": "{empty}",
        },
        {
          "code": "KeyZ",
          "key": "z",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 0,
            "sharps": 0,
          },
        },
        {
          "code": "KeyX",
          "key": "x",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 2,
            "sharps": 0,
          },
        },
        {
          "code": "KeyC",
          "key": "c",
          "note": {
            "flats": 0,
            "note": "E",
            "semitones": 4,
            "sharps": 0,
          },
        },
        {
          "code": "KeyV",
          "key": "v",
          "note": {
            "flats": 0,
            "note": "F",
            "semitones": 5,
            "sharps": 0,
          },
        },
        {
          "code": "KeyB",
          "key": "b",
          "note": {
            "flats": 0,
            "note": "G",
            "semitones": 7,
            "sharps": 0,
          },
        },
        {
          "code": "KeyN",
          "key": "n",
          "note": {
            "flats": 0,
            "note": "A",
            "semitones": 9,
            "sharps": 0,
          },
        },
        {
          "code": "KeyM",
          "key": "m",
          "note": {
            "flats": 0,
            "note": "B",
            "semitones": 11,
            "sharps": 0,
          },
        },
        {
          "code": "Comma",
          "key": ",",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 12,
            "sharps": 0,
          },
        },
        {
          "code": "Period",
          "key": ".",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 14,
            "sharps": 0,
          },
        },
        {
          "code": "Slash",
          "key": "/",
          "note": {
            "flats": 0,
            "note": "E",
            "semitones": 16,
            "sharps": 0,
          },
        },
        {
          "code": "ShiftRight",
          "key": "{shift}",
        },
      ],
      "startNoteOffset": 1,
    },
  ],
  "setCustomRow": {
    "nextKeyIdx": -1,
    "nextNoteOffset": 0,
    "row": {
      "availableNotes": 0,
      "keyType": undefined,
      "keys": [],
      "startNoteOffset": 0,
    },
    "rowIndex": 0,
  },
}
`;

exports[`Keyboard > should map notes to two rows correctly with swedish layout 1`] = `
Keyboard {
  "opts": {
    "hotkeydRows": "two-rows",
    "isCustom": false,
    "layout": {
      "code": "sv",
      "imported": {
        "default": [
          "§ 1 2 3 4 5 6 7 8 9 0 + ´ {bksp}",
          "{tab} q w e r t y u i o p å ¨",
          "{lock} a s d f g h j k l ö ä ' {enter}",
          "{shift} < z x c v b n m , . - {shift}",
          ".com @ {space}",
        ],
        "shift": [
          "° ! " # $ % & / ( ) = ? \` {bksp}",
          "{tab} Q W E R T Y U I O P Å ^",
          "{lock} A S D F G H J K L Ö Ä * {enter}",
          "{shift} > Z X C V B N M ; : _ {shift}",
          ".com @ {space}",
        ],
      },
      "name": "Swedish",
    },
  },
  "rows": [
    {
      "availableNotes": 11,
      "keyType": "black",
      "keys": [
        {
          "code": "IntlBackslash",
          "key": "§",
        },
        {
          "code": "Digit1",
          "key": "1",
        },
        {
          "code": "Digit2",
          "key": "2",
          "note": {
            "flats": 0,
            "note": "G♯",
            "semitones": 20,
            "sharps": 1,
          },
        },
        {
          "code": "Digit3",
          "key": "3",
          "note": {
            "flats": 1,
            "note": "B♭",
            "semitones": 22,
            "sharps": 0,
          },
        },
        {
          "code": "Digit4",
          "key": "4",
        },
        {
          "code": "Digit5",
          "key": "5",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 25,
            "sharps": 1,
          },
        },
        {
          "code": "Digit6",
          "key": "6",
          "note": {
            "flats": 1,
            "note": "E♭",
            "semitones": 27,
            "sharps": 0,
          },
        },
        {
          "code": "Digit7",
          "key": "7",
        },
        {
          "code": "Digit8",
          "key": "8",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 30,
            "sharps": 1,
          },
        },
        {
          "code": "Digit9",
          "key": "9",
          "note": {
            "flats": 0,
            "note": "G♯",
            "semitones": 32,
            "sharps": 1,
          },
        },
        {
          "code": "Digit0",
          "key": "0",
          "note": {
            "flats": 1,
            "note": "B♭",
            "semitones": 34,
            "sharps": 0,
          },
        },
        {
          "code": "Minus",
          "key": "+",
        },
        {
          "code": "Equal",
          "key": "´",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 37,
            "sharps": 1,
          },
        },
        {
          "code": "Backspace",
          "key": "{bksp}",
        },
      ],
      "startNoteOffset": 2,
    },
    {
      "availableNotes": 12,
      "keyType": "white",
      "keys": [
        {
          "code": "Tab",
          "key": "{tab}",
        },
        {
          "code": "KeyQ",
          "key": "q",
          "note": {
            "flats": 0,
            "note": "G",
            "semitones": 19,
            "sharps": 0,
          },
        },
        {
          "code": "KeyW",
          "key": "w",
          "note": {
            "flats": 0,
            "note": "A",
            "semitones": 21,
            "sharps": 0,
          },
        },
        {
          "code": "KeyE",
          "key": "e",
          "note": {
            "flats": 0,
            "note": "B",
            "semitones": 23,
            "sharps": 0,
          },
        },
        {
          "code": "KeyR",
          "key": "r",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 24,
            "sharps": 0,
          },
        },
        {
          "code": "KeyT",
          "key": "t",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 26,
            "sharps": 0,
          },
        },
        {
          "code": "KeyY",
          "key": "y",
          "note": {
            "flats": 0,
            "note": "E",
            "semitones": 28,
            "sharps": 0,
          },
        },
        {
          "code": "KeyU",
          "key": "u",
          "note": {
            "flats": 0,
            "note": "F",
            "semitones": 29,
            "sharps": 0,
          },
        },
        {
          "code": "KeyI",
          "key": "i",
          "note": {
            "flats": 0,
            "note": "G",
            "semitones": 31,
            "sharps": 0,
          },
        },
        {
          "code": "KeyO",
          "key": "o",
          "note": {
            "flats": 0,
            "note": "A",
            "semitones": 33,
            "sharps": 0,
          },
        },
        {
          "code": "KeyP",
          "key": "p",
          "note": {
            "flats": 0,
            "note": "B",
            "semitones": 35,
            "sharps": 0,
          },
        },
        {
          "code": "BracketLeft",
          "key": "å",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 36,
            "sharps": 0,
          },
        },
        {
          "code": "BracketRight",
          "key": "¨",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 38,
            "sharps": 0,
          },
        },
        {
          "code": "Enter",
          "key": "{enter}",
        },
      ],
      "startNoteOffset": 1,
    },
    {
      "availableNotes": 12,
      "keyType": "black",
      "keys": [
        {
          "code": "Capslock",
          "key": "{lock}",
        },
        {
          "code": "KeyA",
          "key": "a",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 1,
            "sharps": 1,
          },
        },
        {
          "code": "KeyS",
          "key": "s",
          "note": {
            "flats": 1,
            "note": "E♭",
            "semitones": 3,
            "sharps": 0,
          },
        },
        {
          "code": "KeyD",
          "key": "d",
        },
        {
          "code": "KeyF",
          "key": "f",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 6,
            "sharps": 1,
          },
        },
        {
          "code": "KeyG",
          "key": "g",
          "note": {
            "flats": 0,
            "note": "G♯",
            "semitones": 8,
            "sharps": 1,
          },
        },
        {
          "code": "KeyH",
          "key": "h",
          "note": {
            "flats": 1,
            "note": "B♭",
            "semitones": 10,
            "sharps": 0,
          },
        },
        {
          "code": "KeyJ",
          "key": "j",
        },
        {
          "code": "KeyK",
          "key": "k",
          "note": {
            "flats": 0,
            "note": "C♯",
            "semitones": 13,
            "sharps": 1,
          },
        },
        {
          "code": "KeyL",
          "key": "l",
          "note": {
            "flats": 1,
            "note": "E♭",
            "semitones": 15,
            "sharps": 0,
          },
        },
        {
          "code": "Semicolon",
          "key": "ö",
        },
        {
          "code": "Quote",
          "key": "ä",
          "note": {
            "flats": 0,
            "note": "F♯",
            "semitones": 18,
            "sharps": 1,
          },
        },
        {
          "code": "Backslash",
          "key": "'",
          "note": {
            "flats": 0,
            "note": "G♯",
            "semitones": 20,
            "sharps": 1,
          },
        },
      ],
      "startNoteOffset": 1,
    },
    {
      "availableNotes": 11,
      "keyType": "white",
      "keys": [
        {
          "code": "ShiftLeft",
          "key": "{shift}",
        },
        {
          "code": "Backquote",
          "key": "<",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 0,
            "sharps": 0,
          },
        },
        {
          "code": "KeyZ",
          "key": "z",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 2,
            "sharps": 0,
          },
        },
        {
          "code": "KeyX",
          "key": "x",
          "note": {
            "flats": 0,
            "note": "E",
            "semitones": 4,
            "sharps": 0,
          },
        },
        {
          "code": "KeyC",
          "key": "c",
          "note": {
            "flats": 0,
            "note": "F",
            "semitones": 5,
            "sharps": 0,
          },
        },
        {
          "code": "KeyV",
          "key": "v",
          "note": {
            "flats": 0,
            "note": "G",
            "semitones": 7,
            "sharps": 0,
          },
        },
        {
          "code": "KeyB",
          "key": "b",
          "note": {
            "flats": 0,
            "note": "A",
            "semitones": 9,
            "sharps": 0,
          },
        },
        {
          "code": "KeyN",
          "key": "n",
          "note": {
            "flats": 0,
            "note": "B",
            "semitones": 11,
            "sharps": 0,
          },
        },
        {
          "code": "KeyM",
          "key": "m",
          "note": {
            "flats": 0,
            "note": "C",
            "semitones": 12,
            "sharps": 0,
          },
        },
        {
          "code": "Comma",
          "key": ",",
          "note": {
            "flats": 0,
            "note": "D",
            "semitones": 14,
            "sharps": 0,
          },
        },
        {
          "code": "Period",
          "key": ".",
          "note": {
            "flats": 0,
            "note": "E",
            "semitones": 16,
            "sharps": 0,
          },
        },
        {
          "code": "Slash",
          "key": "-",
          "note": {
            "flats": 0,
            "note": "F",
            "semitones": 17,
            "sharps": 0,
          },
        },
        {
          "code": "ShiftRight",
          "key": "{shift}",
        },
      ],
      "startNoteOffset": 1,
    },
  ],
  "setCustomRow": {
    "nextKeyIdx": -1,
    "nextNoteOffset": 0,
    "row": {
      "availableNotes": 0,
      "keyType": undefined,
      "keys": [],
      "startNoteOffset": 0,
    },
    "rowIndex": 0,
  },
}
`;
